Fix orb overlapp on screen and adjustement position

--- a/src/assets/css/Name.css
+++ b/src/assets/css/Name.css
@@ -1,17 +1,21 @@
+/* Name.css */
 .text-wrapper {
-    position: absolute;
-    top: 0;
-    left: 0;
+    position: absolute;       /* Absolute inside .orb-container */
+    top: 0; left: 0;          /* Ensure it starts at top-left */
     width: 100%;
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 2; /* Ensure it's above the canvas */
+    z-index: 2; /* Above the canvas */
 }
 
 .name {
     color: white;
     font-size: 24px;
     text-align: center;
+}
+
+.name h1 {
+   margin-bottom: auto;
 }
